# risk-monitor-py

./: .coverage  .gitignore  .markdownlint.json  .markdownlintignore  .validation_exceptions  AGENTS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  PULL_REQUEST.md  README.md  TODO-HISTORY.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
docs/prs/: feat-epic-TSE-0001-prometheus-metrics-client.md  feature-TSE-0001.12.0-named-components-foundation.md  feature-TSE-0001.12.0b-prometheus-metrics-client.md  feature-TSE-0001.3c-complete-grpc-integration.md  feature-epic-TSE-0001-named-components-foundation.md  feature-epic-TSE-0002-connect-protocol.md  fix-pytest-asyncio-compatibility.md  refactor-epic-TSE-0001.4-data-adapters-and-orchestrator.md
scripts/: validate_tse_0001_3c.py
src/risk_monitor/: __init__.py  main.py
src/risk_monitor/domain/: __init__.py  risk_service.py
src/risk_monitor/domain/ports/: __init__.py  metrics.py
src/risk_monitor/infrastructure/: config.py  configuration_client.py  grpc_clients.py  logging.py  service_discovery.py
src/risk_monitor/infrastructure/observability/: __init__.py  metrics_middleware.py  prometheus_adapter.py
src/risk_monitor/presentation/: health.py
src/risk_monitor/presentation/connect/: __init__.py  analytics_adapter.py
src/risk_monitor/presentation/grpc/: __init__.py  server.py
src/risk_monitor/presentation/grpc/services/: __init__.py  health.py  risk.py
src/risk_monitor/presentation/http/: __init__.py  app.py
src/risk_monitor/presentation/http/routers/: __init__.py  health.py  metrics.py  risk.py
src/risk_monitor/presentation/shared/: __init__.py  converters.py  middleware.py
tests/: conftest.py
tests/integration/: test_adapter_integration.py  test_configuration_service_client.py  test_inter_service_communication.py  test_service_discovery.py
tests/unit/: test_grpc_analytics.py  test_health_endpoints.py  test_risk_routes.py  test_startup.py
tests/unit/domain/ports/: test_metrics_port.py
tests/unit/infrastructure/observability/: __init__.py  test_prometheus_adapter.py
